OS INFO -> Linux OS Info Works -> Added logger everywhere -> Added some helpers for linux and windwos

--- a/McControllerX-Daemon.csproj
+++ b/McControllerX-Daemon.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Salaros.ConfigParser" Version="0.3.8" />
+    <PackageReference Include="System.Management" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
