--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ server {
   ssl_prefer_server_ciphers on;
 
   location / {
-    proxy_pass http://localhost:<port>/;
+    proxy_pass http://localhost:1953/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
